<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:foregroundTint="#00FFFFFF"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:fontFamily="@font/graduate"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#47A992"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>


    <Button
        android:id="@+id/settingsButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/button_background"
        android:backgroundTint="#318B6D"
        android:drawableTop="@drawable/ic_settings"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/welcomeButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/websiteButton"
        app:layout_constraintTop_toTopOf="@+id/titleText" />

    <Button
        android:id="@+id/websiteButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/button_background"
        android:backgroundTint="#3B9B80"
        android:drawableTop="@drawable/ic_mouse"
        android:onClick="openWebsite"
        app:layout_constraintBaseline_toBaselineOf="@+id/settingsButton"
        app:layout_constraintEnd_toStartOf="@+id/settingsButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/welcomeButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/button_background"
        android:backgroundTint="#297A59"
        android:drawableTop="@drawable/ic_search"
        app:layout_constraintBaseline_toBaselineOf="@+id/settingsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/settingsButton" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@null"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/repertoryButton"
        app:layout_constraintVertical_bias="0.19999999">

        <ImageView
            android:id="@+id/nfcImageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:onClick="openNfcOption"
            android:src="@drawable/ic_nfc"
            android:textAlignment="center"
            android:tint="#1F23FF" />

        <Button
            android:id="@+id/nfcButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@null"
            android:gravity="center"
            android:text="@string/nfc"
            android:textColor="#010101"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@null"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myCardsButton"
        app:layout_constraintVertical_bias="0.19">

        <ImageView
            android:id="@+id/addImageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:onClick="openCreateCardMenu"
            android:src="@drawable/ic_plus"
            android:textAlignment="center"
            android:tint="#33B819" />

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@null"
            android:gravity="center"
            android:text="@string/new_card"
            android:textColor="#010101"
            android:textStyle="bold" />


    </LinearLayout>


    <Button
        android:id="@+id/repertoryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_options"
        android:backgroundTint="#00FFFFFF"
        android:drawableTop="@drawable/ic_repertory"
        android:onClick="openRepertoryMenu"
        android:text="@string/repertory"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/myCardsButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.400000" />

    <Button
        android:id="@+id/myCardsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_options"
        android:backgroundTint="#00FFFFFF"
        android:drawableTop="@drawable/ic_my_cards"
        android:elevation="20dp"
        android:onClick="openMyCardsMenu"
        android:text="@string/my_cards"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/repertoryButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.400000" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="81dp"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>

